# NTIRE-2026-DeepFake-Detection

./: .gitignore  README.md  READMI.md  pyproject.toml
baseline/: inference_resnet.py  inference_vit.py  train_resnet.py  train_vit.py
baseline/aug_utils_train/: __init__.py  distortions.py  utils_data.py  utils_distortions.py
